- A typo in the name of the Biocompatibility quality has been fixed (it was previously called Biocompatability).
- The range of the Ares Armatus now loads properly.
- The Dangerous Area and Obscure/Difficult to Find basic lifestyle qualities' page references are now correct.
- Ondansetron is now properly called Ondansetron instead of Ondanstron.

Changed/New Strings:
- String_RestrictedItemsHidden
- Label_Options_MugshotCompression
- Label_Options_ImageQuality
- String_Lossless_Compression_Option
- String_Lossy_Compression_Option
- String_Bold
- String_Italic
- String_Underline
- String_Strikethrough
- String_Font
- String_ForeColor
- String_BackColor
- String_AlignLeft
- String_AlignCenter
- String_AlignRight
- String_UnorderedList
- String_IncreaseIndent
- String_DecreaseIndent
- String_AstralReputation
- String_WildReputation
- Label_AstralReputation
- Label_WildReputation
- Message_UnderLanguageLimit
- Tip_SkillsKnowledgeSkills
- Skill_NativeLanguageLong
- Message_NewNativeLanguageSkill
- Label_CMRecovery
- Title_MasterIndex
- Label_MasterIndex_SourceClickReminder
- Checkbox_Options_HideMasterIndex
- Label_GroupContacts
- String_PlusSkillPointsSpent
- String_CapacityRemaining
- String_Concealability
- String_UpgradedRating
- Message_DeleteVehicleMod
- Checkbox_ShowChart
- Message_File_Cannot_Be_Read_Accessed

Build 212
Application Changes:
- When entering Nuyen and Karma expenses for Working for the Man/People, it's now possible to flag the expense entry as always being present in the Expense log. This will in effect reduce the Career Karma or Career Nuyen by the selected amount. Closes #4096, closes #3613
- Added InitiationGroup, InitiationOrdeal and InitiationSchooling option values for Submersion and Initiation respectively. Ensures that values are correct across multiple locations. Currently not exposed to user change. 